Ensure collapsed vertical panel title aligned properly

--- a/desktop/cmp/panel/impl/PanelHeader.scss
+++ b/desktop/cmp/panel/impl/PanelHeader.scss
@@ -33,27 +33,14 @@
     color: var(--xh-title-text-color) !important;
   }
 
-  // Compact mode
-  &--compact {
-    height: var(--xh-title-compact-height-px);
-    font-size: var(--xh-title-compact-font-size-px);
-    padding: 0 0 0 var(--xh-pad-half-px);
-
-    .xh-panel-header__title {
-      font-size: var(--xh-title-compact-font-size-px);
-    }
-
-    &.xh-vbox {
-      padding: var(--xh-pad-half-px) 0 0 0;
-      width: var(--xh-title-compact-height-px);
-    }
-  }
-
   // Vertical mode - collapsed to left or right
   &.xh-vbox {
+    width: var(--xh-title-height-px);
+
     .xh-panel-header__title {
       writing-mode: vertical-lr;
       -ms-block-progression: lr;
+      width: calc(1em + 5px); // Width has to be font-size +5px for alignment as of potential Chrome 89 bug
     }
 
     &.xh-panel-header--left {
@@ -72,6 +59,22 @@
       & > .svg-inline--fa {
         margin: 0 0 10px 0;
       }
+    }
+  }
+
+  // Compact mode
+  &--compact {
+    height: var(--xh-title-compact-height-px);
+    font-size: var(--xh-title-compact-font-size-px);
+    padding: 0 0 0 var(--xh-pad-half-px);
+
+    .xh-panel-header__title {
+      font-size: var(--xh-title-compact-font-size-px);
+    }
+
+    &.xh-vbox {
+      padding: var(--xh-pad-half-px) 0 0 0;
+      width: var(--xh-title-compact-height-px);
     }
   }
 }
